feat: version bump of kubezero-auth / keycloak

--- a/charts/kubezero-auth/templates/keycloak/operator.yaml
+++ b/charts/kubezero-auth/templates/keycloak/operator.yaml
@@ -4,9 +4,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   annotations:
-    app.quarkus.io/build-timestamp: 2022-06-17 - 10:24:55 +0000
+    app.quarkus.io/build-timestamp: 2022-07-29 - 11:21:21 +0000
   labels:
-    app.kubernetes.io/version: 18.0.1
+    app.kubernetes.io/version: 19.0.1
     app.kubernetes.io/name: keycloak-operator
   name: keycloak-operator
 ---
@@ -14,10 +14,10 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    app.quarkus.io/build-timestamp: 2022-06-17 - 10:24:55 +0000
+    app.quarkus.io/build-timestamp: 2022-07-29 - 11:21:21 +0000
   labels:
     app.kubernetes.io/name: keycloak-operator
-    app.kubernetes.io/version: 18.0.1
+    app.kubernetes.io/version: 19.0.1
   name: keycloak-operator
 spec:
   ports:
@@ -26,7 +26,7 @@ spec:
       targetPort: 8080
   selector:
     app.kubernetes.io/name: keycloak-operator
-    app.kubernetes.io/version: 18.0.1
+    app.kubernetes.io/version: 19.0.1
   type: ClusterIP
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -38,7 +38,7 @@ rules:
       - apps
       - extensions
     resources:
-      - deployments
+      - statefulsets
     verbs:
       - get
       - list
@@ -179,23 +179,23 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    app.quarkus.io/build-timestamp: 2022-06-17 - 10:24:55 +0000
+    app.quarkus.io/build-timestamp: 2022-07-29 - 11:21:21 +0000
   labels:
-    app.kubernetes.io/version: 18.0.1
+    app.kubernetes.io/version: 19.0.1
     app.kubernetes.io/name: keycloak-operator
   name: keycloak-operator
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/version: 18.0.1
+      app.kubernetes.io/version: 19.0.1
       app.kubernetes.io/name: keycloak-operator
   template:
     metadata:
       annotations:
-        app.quarkus.io/build-timestamp: 2022-06-17 - 10:24:55 +0000
+        app.quarkus.io/build-timestamp: 2022-07-29 - 11:21:21 +0000
       labels:
-        app.kubernetes.io/version: 18.0.1
+        app.kubernetes.io/version: 19.0.1
         app.kubernetes.io/name: keycloak-operator
     spec:
       containers:
@@ -205,8 +205,8 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
             - name: OPERATOR_KEYCLOAK_IMAGE
-              value: quay.io/keycloak/keycloak:18.0.1
-          image: quay.io/keycloak/keycloak-operator:18.0.1
+              value: quay.io/keycloak/keycloak:19.0.1
+          image: quay.io/keycloak/keycloak-operator:19.0.1
           imagePullPolicy: Always
           livenessProbe:
             failureThreshold: 3
