--- a/charts/kubezero-auth/values.yaml
+++ b/charts/kubezero-auth/values.yaml
@@ -13,6 +13,7 @@ postgresql:
   enabled: false
 
   auth:
+    existingSecret: kubezero-auth-postgresql
     username: keycloak
     database: keycloak
 
