--- a/charts/kubeadm/templates/admin-aws-iam.yaml
+++ b/charts/kubeadm/templates/admin-aws-iam.yaml
@@ -4,13 +4,13 @@ kind: Config
 clusters:
 - cluster:
     server: https://{{ .Values.api.endpoint }}
-  name: {{ .Values.clusterName }}
+  name: {{ .Values.global.clusterName }}
 contexts:
 - context:
-    cluster: {{ .Values.clusterName }}
+    cluster: {{ .Values.global.clusterName }}
     user: kubernetes-admin
-  name: kubernetes-admin@{{ .Values.clusterName }}
-current-context: kubernetes-admin@{{ .Values.clusterName }}
+  name: kubernetes-admin@{{ .Values.global.clusterName }}
+current-context: kubernetes-admin@{{ .Values.global.clusterName }}
 preferences: {}
 users:
 - name: kubernetes-admin
@@ -21,7 +21,7 @@ users:
       args:
         - "token"
         - "-i"
-        - "{{ .Values.clusterName }}"
+        - "{{ .Values.global.clusterName }}"
         - "-r"
         - "{{ .Values.api.awsIamAuth.kubeAdminRole }}"
 {{- end }}
