--- a/charts/kubeadm/templates/resources/51-aws-iam-authenticator-deployment.yaml
+++ b/charts/kubeadm/templates/resources/51-aws-iam-authenticator-deployment.yaml
@@ -75,7 +75,7 @@ metadata:
     k8s-app: aws-iam-authenticator
 data:
   config.yaml: |
-    clusterID: {{ .Values.clusterName }}
+    clusterID: {{ .Values.global.clusterName }}
 
 ---
 apiVersion: apps/v1
