--- a/charts/kubezero-addons/Chart.yaml
+++ b/charts/kubezero-addons/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-addons
 description: KubeZero umbrella chart for various optional cluster addons
 type: application
-version: 0.6.0
+version: 0.6.1
 appVersion: v1.23.10
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
@@ -23,4 +23,8 @@ dependencies:
     version: 1.11.0
     repository: https://kubernetes-sigs.github.io/external-dns/
     condition: external-dns.enabled
+  - name: cluster-autoscaler
+    version: 9.21.0
+    repository: https://kubernetes.github.io/autoscaler
+    condition: cluster-autoscaler.enabled
 kubeVersion: ">= 1.20.0"
