--- a/charts/kubezero-network/charts/calico/templates/calico.yaml
+++ b/charts/kubezero-network/charts/calico/templates/calico.yaml
@@ -424,6 +424,8 @@ spec:
             # Auto-detect the BGP IP address.
             - name: IP
               value: "autodetect"
+            - name: IP_AUTODETECTION_METHOD
+              value: "interface=eth.*"
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
               value: "Never"
