--- a/charts/kubezero-addons/Chart.yaml
+++ b/charts/kubezero-addons/Chart.yaml
@@ -2,13 +2,15 @@ apiVersion: v2
 name: kubezero-addons
 description: KubeZero umbrella chart for various optional cluster addons
 type: application
-version: 0.6.1
+version: 0.6.2
 appVersion: v1.23.10
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - fuse-device-plugin
+  - neuron-device-plugin
+  - nvidia-device-plugin
   - aws-node-termination-handler
   - external-dns
 maintainers:
@@ -27,4 +29,9 @@ dependencies:
     version: 9.21.0
     repository: https://kubernetes.github.io/autoscaler
     condition: cluster-autoscaler.enabled
+  - name: nvidia-device-plugin
+    version: 0.12.2
+    # https://github.com/NVIDIA/k8s-device-plugin
+    repository: https://nvidia.github.io/k8s-device-plugin
+    condition: nvidia-device-plugin.enabled
 kubeVersion: ">= 1.20.0"
