--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -114,15 +114,15 @@ jenkins:
                       numToKeepStr: "10"
 
     installPlugins:
-      - kubernetes:3670.v6ca_059233222
+      - kubernetes:3704.va_08f0206b_95e
       - workflow-aggregator:581.v0c46fa_697ffd
-      - git:4.11.4
+      - git:4.11.5
       - configuration-as-code:1512.vb_79d418d5fc8
       - antisamy-markup-formatter:2.7
       - prometheus:2.0.11
       - htmlpublisher:1.30
-      - build-discarder:60.v1747b0eb632a
-      - dark-theme:185.v276b_5a_8966a_e
+      - build-discarder:139.v05696a_7fe240
+      - dark-theme:245.vb_a_2b_b_010ea_96
       - kubernetes-credentials-provider:1.196.va_55f5e31e3c2
 
   serviceAccountAgent:
