--- a/charts/kubezero/templates/addons.yaml
+++ b/charts/kubezero/templates/addons.yaml
@@ -28,6 +28,11 @@ awsNeuron:
   {{- toYaml . | nindent 2 }}
 {{- end }}
 
+{{- with index .Values "addons" "nvidia-device-plugin" }}
+nvidia-device-plugin:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
+
 {{- with index .Values "addons" "external-dns" }}
 external-dns:
   {{- toYaml . | nindent 2 }}
