--- a/charts/kubezero/templates/network.yaml
+++ b/charts/kubezero/templates/network.yaml
@@ -19,7 +19,7 @@ cilium:
 {{- define "network-argo" }}
   # Metallb
   ignoreDifferences:
-  - group: apiextensions.k8s.io/v1
+  - group: apiextensions.k8s.io
     kind: CustomResourceDefinition
     jsonPointers:
     - /spec/conversion/webhook/clientConfig/caBundle
