--- a/charts/kubezero-sql/Chart.yaml
+++ b/charts/kubezero-sql/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-sql
 description: KubeZero umbrella chart for SQL databases like MariaDB, PostgreSQL
 type: application
-version: 0.1.2
+version: 0.2.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -10,13 +10,14 @@ keywords:
   - mariadb
   - postgresql
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
-    version: ">= 0.1.3"
+    version: ">= 0.1.5"
     repository: https://cdn.zero-downtime.net/charts/
   - name: mariadb-galera
-    version: 5.11.1
+    version: 7.4.2
     repository: https://charts.bitnami.com/bitnami
     condition: mariadb-galera.enabled
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.20.0"
