fix: various upgrade fixes

--- a/charts/kubezero/templates/istio.yaml
+++ b/charts/kubezero/templates/istio.yaml
@@ -2,7 +2,7 @@
 istiod:
   telemetry:
     enabled: {{ $.Values.metrics.enabled }}
-{{- if .Values.HighAvailableControlplane }}
+{{- if .Values.global.highAvailable }}
   pilot:
     replicaCount: 2
 global:
