--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -257,11 +257,8 @@ fluent-bit:
   #dnsPolicy: ClusterFirstWithHostNet
 
   tolerations:
-  - key: node-role.kubernetes.io/master
-    effect: NoSchedule
-  - key: kubezero-workergroup
-    effect: NoSchedule
-    operator: Exists
+    - effect: NoSchedule
+      operator: Exists
 
   resources:
     requests:
